@@ -14,6 +14,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="lang"/>
     <label name="module"/>
     <field name="module"/>
+    <label name="overriden_by"/>
+    <field name="overriden_by"/>
     <group col="2" colspan="6" yexpand="1" yfill="1" id="src_value">
         <separator name="src"/>
         <separator name="value"/>
